Label added, Texts Visible option unified Bar length fixed Quiz Button(Not Page) added

--- a/src/Components/Overlay.css
+++ b/src/Components/Overlay.css
@@ -24,7 +24,9 @@
 }
 
 .Texts {
-  position: relative;
+  position: absolute;
+  width: 18vw;
+  height: fit-content;
   display: flex;
   left: 60vw;
   flex-direction: column;
@@ -32,14 +34,36 @@
   font-size: 16px;
   line-height: 1.5;
   z-index: 1;
-  margin-bottom: 28vw;
 }
 
 .TextContainer {
   font-size: 2vmin;
   box-shadow: 0px 0px 10px 10px rgba(204, 204, 204, 0.7);
   background-color: rgba(204, 204, 204, 0.7);
-  margin-top: 24vw;
-  margin-bottom: 32vw;
-  width: 18vw;
+  margin-bottom: 48vw;
+  width: 100%;
+}
+
+.Button {
+    margin: 0 auto 16vw auto;
+    width: 8vw;
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(220, 0, 0, 1);
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.Button:hover {
+    background-color: rgba(255, 0, 0, 1);
 }
